--- a/assets/css/partials/_menu.scss
+++ b/assets/css/partials/_menu.scss
@@ -1,33 +1,32 @@
 header{
-  width: 100%;
-  padding-top: 16px;
+  max-width: 100%;
+  padding-top: 16px;  
 }
 
 .nav-bar{
-  width: 80%;
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 16px;
   
   .nav-menu{
     display: flex;
-   
+    
     .logo{
-      width: 80px
+      max-width: 88px;
+      padding-right: 12px;
     }
     .nav-list{
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      
       & li:last-child a{
         color: red;
       }
 
       li{
-        margin-left: 24px;
+        margin-left: 18px;
       }
 
       .nav-link{
@@ -39,13 +38,14 @@ header{
         letter-spacing: 2px;
         text-transform: uppercase;
         position: relative;
+        text-align: center;
 
         &::after{
           content: '';
           display: block;
           position: absolute;
           left:50%;
-          top:-40px;
+          top:-45px;
           transition: .4s ease;
           width: 5px;
           height: 5px;
@@ -68,8 +68,10 @@ header{
     align-items: center;
 
     svg{
-      width: 24px;
-      margin-left: 8px;
+      font-size: 12px;
+      margin-left: 16px;
+      max-width: 24px;
+      max-height: 12px;
 
       path, circle{
         transition: .4s ease;
@@ -86,4 +88,6 @@ header{
 }
 
 
- 
+@media(max-width: 500px){
+  .nav-link{font-size: 10px!important;}
+}
