--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@ a{
 
 
 body {
+  overflow-x: hidden;
   width: 100%;
   height: 100vh;
   background-color: #1a1a1a;
@@ -40,3 +41,56 @@ p{
 @import 'partials/layout';
 @import 'partials/menu';
 @import 'partials/animations';
+
+
+// TABLET
+@media(max-width: 800px){
+  .btn{
+    padding: 6px 14px!important;
+    font-size: 14px!important;
+  }
+  .btn-secondary{
+    padding: 4px 16px!important;
+    font-size: 14px!important;
+  }
+  .container-left{
+    min-width: 290px!important;
+    .text p{
+      font-size: 12px!important;
+    }
+  }
+  .container-right img{
+    transform: scale(1.2) translate3d(-10%,-15%,0)!important;
+  }
+}
+@media(max-width: 700px){
+  .container-right img{
+    transform: scale(1.2) translate3d(-12.5%,-20%,0)!important;
+  }
+}
+@media(max-width: 600px){
+  .container-right img{
+    transform: scale(1.2) translate3d(-15%,-25%,0)!important;
+  }
+}
+
+// MOBILE
+@media(max-width: 500px){
+  .btn{
+    padding: 6px 14px!important;
+    font-size: 14px!important;
+  }
+  .btn-secondary{
+    padding: 4px 16px!important;
+    font-size: 14px!important;
+  }
+  .container-left{
+    min-width: 290px;
+    .text p{
+      font-size: 12px!important;
+    }
+  }
+  .container-right img{
+    transform: scale(1.4) translate3d(-15%,-55%,0)!important;
+  }
+}
