--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,9 @@ header {
 }
 
 @media (max-width: 800px) {
+  .container {
+    margin-top: 50px;
+  }
   .btn {
     padding: 6px 14px !important;
     font-size: 14px !important;
@@ -305,22 +308,22 @@ header {
     font-size: 12px !important;
   }
   .container-right img {
-    -webkit-transform: scale(1.2) translate3d(-10%, -15%, 0) !important;
-            transform: scale(1.2) translate3d(-10%, -15%, 0) !important;
+    -webkit-transform: scale(1.2) translate3d(-10%, -10%, 0) !important;
+            transform: scale(1.2) translate3d(-10%, -10%, 0) !important;
   }
 }
 
 @media (max-width: 700px) {
   .container-right img {
-    -webkit-transform: scale(1.2) translate3d(-12.5%, -20%, 0) !important;
-            transform: scale(1.2) translate3d(-12.5%, -20%, 0) !important;
+    -webkit-transform: scale(1.2) translate3d(-12.5%, -12.5%, 0) !important;
+            transform: scale(1.2) translate3d(-12.5%, -12.5%, 0) !important;
   }
 }
 
 @media (max-width: 600px) {
   .container-right img {
-    -webkit-transform: scale(1.2) translate3d(-15%, -25%, 0) !important;
-            transform: scale(1.2) translate3d(-15%, -25%, 0) !important;
+    -webkit-transform: scale(1.2) translate3d(-15%, -20%, 0) !important;
+            transform: scale(1.2) translate3d(-15%, -20%, 0) !important;
   }
 }
 
@@ -340,8 +343,8 @@ header {
     font-size: 12px !important;
   }
   .container-right img {
-    -webkit-transform: scale(1.4) translate3d(-15%, -55%, 0) !important;
-            transform: scale(1.4) translate3d(-15%, -55%, 0) !important;
+    -webkit-transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
+            transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
