--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,6 +45,9 @@ p{
 
 // TABLET
 @media(max-width: 800px){
+  .container{
+    margin-top: 50px;
+  }
   .btn{
     padding: 6px 14px!important;
     font-size: 14px!important;
@@ -60,17 +63,17 @@ p{
     }
   }
   .container-right img{
-    transform: scale(1.2) translate3d(-10%,-15%,0)!important;
+    transform: scale(1.2) translate3d(-10%,-10%,0)!important;
   }
 }
 @media(max-width: 700px){
   .container-right img{
-    transform: scale(1.2) translate3d(-12.5%,-20%,0)!important;
+    transform: scale(1.2) translate3d(-12.5%,-12.5%,0)!important;
   }
 }
 @media(max-width: 600px){
   .container-right img{
-    transform: scale(1.2) translate3d(-15%,-25%,0)!important;
+    transform: scale(1.2) translate3d(-15%,-20%,0)!important;
   }
 }
 
@@ -91,6 +94,6 @@ p{
     }
   }
   .container-right img{
-    transform: scale(1.4) translate3d(-15%,-55%,0)!important;
+    transform: scale(1.4) translate3d(-15%,-45%,0)!important;
   }
 }
