--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,18 @@ a {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   height: 100vh;
   background-color: #1a1a1a;
+  background: -webkit-gradient(linear, left top, right top, color-stop(23.96%, #0B0C10), color-stop(54.09%, rgba(65, 11, 11, 0.5)), color-stop(77.6%, #0C0C10)), url("../img/spiderman-bg.png");
+  background: linear-gradient(90deg, #0B0C10 23.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 77.6%), url("../img/spiderman-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-img, svg {
+img,
+svg {
   display: block;
   width: 100%;
 }
@@ -50,7 +55,7 @@ p {
 
 .container .container-left {
   max-width: 576px;
-  min-height: 350px;
+  min-height: 390px;
   max-height: 540px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -163,14 +168,18 @@ p {
   display: flex;
 }
 
+.container .container-left .icons svg {
+  max-width: 60px;
+}
+
 .container .container-left .icons :first-child {
   margin-right: 6px;
 }
 
 .container .container-right img {
   width: 150%;
-  -webkit-transform: translate3d(-20%, 0, 0);
-          transform: translate3d(-20%, 0, 0);
+  -webkit-transform: translate3d(-17.5%, 0, 0);
+          transform: translate3d(-17.5%, 0, 0);
 }
 
 header {
@@ -266,15 +275,19 @@ header {
 }
 
 .nav-bar .nav-social svg {
-  font-size: 12px;
-  margin-left: 16px;
+  font-size: 24px;
+  margin-left: 24px;
   max-width: 24px;
-  max-height: 12px;
+  max-height: 24px;
 }
 
 .nav-bar .nav-social svg path, .nav-bar .nav-social svg circle {
   -webkit-transition: .4s ease;
   transition: .4s ease;
+}
+
+.nav-bar .nav-social svg:hover {
+  cursor: pointer;
 }
 
 .nav-bar .nav-social svg:hover path, .nav-bar .nav-social svg:hover circle {
@@ -289,12 +302,19 @@ header {
   }
 }
 
+@media (max-width: 1440px) {
+  .container-right img {
+    width: 120% !important;
+  }
+}
+
 @media (max-width: 800px) {
   .container {
     margin-top: 50px;
+    overflow: hidden;
   }
   .btn {
-    padding: 6px 14px !important;
+    padding: 6px 16px !important;
     font-size: 14px !important;
   }
   .btn-secondary {
@@ -328,6 +348,9 @@ header {
 }
 
 @media (max-width: 500px) {
+  .nav-social {
+    display: none !important;
+  }
   .btn {
     padding: 6px 14px !important;
     font-size: 14px !important;
@@ -336,10 +359,16 @@ header {
     padding: 4px 16px !important;
     font-size: 14px !important;
   }
-  .container-left {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .container .container-left {
     min-width: 290px;
   }
-  .container-left .text p {
+  .container .container-left .text p {
     font-size: 12px !important;
   }
   .container-right img {
