--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,31 +7,35 @@
   font-family: 'Mukta'
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
 @import 'partials/colors';
 
-a{
+a {
   text-decoration: none;
   color: $white;
 }
 
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   height: 100vh;
   background-color: #1a1a1a;
+  background: linear-gradient(90deg, #0B0C10 23.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 77.6%), url('../img/spiderman-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-img, svg{
+img,
+svg {
   display: block;
   width: 100%
 }
 
-p{
+p {
   font-size: 14px;
   color: $gray-3;
   letter-spacing: 1px;
@@ -42,58 +46,85 @@ p{
 @import 'partials/menu';
 @import 'partials/animations';
 
+@media(max-width: 1440px) {
+  .container-right{
+    img{
+      width: 120%!important;
+    }
+  }
+}
 
 // TABLET
-@media(max-width: 800px){
-  .container{
+@media(max-width: 800px) {
+  .container {
     margin-top: 50px;
+    overflow: hidden;
   }
-  .btn{
-    padding: 6px 14px!important;
+
+  .btn {
+    padding: 6px 16px!important;
     font-size: 14px!important;
   }
-  .btn-secondary{
+
+  .btn-secondary {
     padding: 4px 16px!important;
     font-size: 14px!important;
   }
-  .container-left{
-    min-width: 290px!important;
-    .text p{
-      font-size: 12px!important;
+
+  .container-left {
+    min-width: 290px !important;
+
+    .text p {
+      font-size: 12px !important;
     }
   }
-  .container-right img{
-    transform: scale(1.2) translate3d(-10%,-10%,0)!important;
+
+  .container-right img {
+    transform: scale(1.2) translate3d(-10%, -10%, 0) !important;
   }
 }
-@media(max-width: 700px){
-  .container-right img{
-    transform: scale(1.2) translate3d(-12.5%,-12.5%,0)!important;
+
+@media(max-width: 700px) {
+  .container-right img {
+    transform: scale(1.2) translate3d(-12.5%, -12.5%, 0) !important;
   }
 }
-@media(max-width: 600px){
-  .container-right img{
-    transform: scale(1.2) translate3d(-15%,-20%,0)!important;
+
+@media(max-width: 600px) {
+  .container-right img {
+    transform: scale(1.2) translate3d(-15%, -20%, 0) !important;
   }
 }
 
 // MOBILE
-@media(max-width: 500px){
-  .btn{
-    padding: 6px 14px!important;
-    font-size: 14px!important;
+@media(max-width: 500px) {
+  .nav-social {
+    display: none !important;
   }
-  .btn-secondary{
-    padding: 4px 16px!important;
-    font-size: 14px!important;
+
+  .btn {
+    padding: 6px 14px !important;
+    font-size: 14px !important;
   }
-  .container-left{
-    min-width: 290px;
-    .text p{
-      font-size: 12px!important;
+
+  .btn-secondary {
+    padding: 4px 16px !important;
+    font-size: 14px !important;
+  }
+
+  .container {
+    flex-direction: column-reverse;
+
+    .container-left {
+      min-width: 290px;
+
+      .text p {
+        font-size: 12px !important;
+      }
     }
   }
-  .container-right img{
-    transform: scale(1.4) translate3d(-15%,-45%,0)!important;
+
+  .container-right img {
+    transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
 }
