Correção em resolução de width 1368px

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,10 +46,13 @@ p {
 @import 'partials/menu';
 @import 'partials/animations';
 
-@media(max-width: 1440px) {
+@media(max-width: 1368px) {
+  .container{
+    max-width: 1280px;
+  }
   .container-right{
     img{
-      width: 120%!important;
+      width: 130%!important;
     }
   }
 }
