--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,9 +302,12 @@ header {
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1368px) {
+  .container {
+    max-width: 1280px;
+  }
   .container-right img {
-    width: 120% !important;
+    width: 130% !important;
   }
 }
 
