--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@ p {
 
   .container {
     .container-left {
-      min-width: 290px;
+      max-width: 290px;
 
       .text p {
         font-size: 12px !important;
