--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,12 +363,13 @@ header {
     font-size: 14px !important;
   }
   .container .container-left {
-    max-width: 290px;
+    max-width: 200px;
   }
   .container .container-left .text p {
     font-size: 12px !important;
   }
   .container-right img {
+    min-width: 150px;
     -webkit-transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
             transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
