--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@ p {
 
   .container {
     .container-left {
-      max-width: 290px;
+      max-width: 200px;
 
       .text p {
         font-size: 12px !important;
@@ -126,6 +126,7 @@ p {
   }
 
   .container-right img {
+    min-width: 150px;
     transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
 }
