--- a/assets/css/partials/_menu.scss
+++ b/assets/css/partials/_menu.scss
@@ -1,5 +1,5 @@
 header{
-  max-width: 100%;
+  max-width: 100vw;
   padding-top: 16px;  
 }
 
@@ -86,9 +86,4 @@ header{
       }
     }
   }
-}
-
-
-@media(max-width: 500px){
-  .nav-link{font-size: 10px!important;}
 }
