--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,7 @@ a {
 body {
   overflow: hidden;
   width: 100%;
+  max-width: 100vw;
   height: 100vh;
   background-color: #1a1a1a;
   background: linear-gradient(90deg, #0B0C10 23.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 77.6%), url('../img/spiderman-bg.png');
@@ -59,6 +60,12 @@ p {
 
 // TABLET
 @media(max-width: 800px) {
+  body{
+    background: linear-gradient(90deg, #0B0C10 13.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 97.6%), url('../img/spiderman-bg.png')!important;
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+    background-position-x: 50% !important;
+  }
   .container {
     margin-top: 50px;
     overflow: hidden;
@@ -101,6 +108,12 @@ p {
 
 // MOBILE
 @media(max-width: 500px) {
+  .nav-link{font-size: 10px!important;}
+  .nav-list {
+    & li{margin-left: 12px !important;}
+    & li:first-child {margin-left: 0!important;}
+
+  }
   .nav-social {
     display: none !important;
   }
