--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,14 +373,14 @@ header {
     padding: 4px 16px !important;
     font-size: 14px !important;
   }
-  .container .container-left {
-    max-width: 200px;
-  }
   .container .container-left .text p {
     font-size: 12px !important;
   }
+  .container-left {
+    max-width: 30vw !important;
+  }
   .container-right img {
-    min-width: 150px;
+    min-width: 30vw;
     -webkit-transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
             transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
