--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,18 +128,14 @@ p {
     font-size: 14px !important;
   }
 
-  .container {
-    .container-left {
-      max-width: 200px;
-
-      .text p {
-        font-size: 12px !important;
-      }
-    }
+  .container .container-left .text p {
+    font-size: 12px !important;
   }
-
+  .container-left {
+    max-width: 30vw!important;
+  }
   .container-right img {
-    min-width: 150px;
+    min-width: 30vw;
     transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
 }
