--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,7 +61,7 @@ p {
 // TABLET
 @media(max-width: 800px) {
   body{
-    background: linear-gradient(90deg, #0B0C10 13.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 97.6%), url('../img/spiderman-bg.png')!important;
+    background: linear-gradient(90deg, #0B0C10 23.96%, rgba(65, 11, 11, 0.5) 54.09%, #0C0C10 67.6%), url('../img/spiderman-bg.png')!important;
     background-size: cover!important;
     background-repeat: no-repeat!important;
     background-position-x: 50% !important;
@@ -101,13 +101,11 @@ p {
 }
 
 @media(max-width: 600px) {
-  .container-right img {
-    transform: scale(1.2) translate3d(-15%, -20%, 0) !important;
+  body{
+    background-size: 200% 100%!important;
+    background-position-x: 50% !important;
   }
-}
 
-// MOBILE
-@media(max-width: 500px) {
   .nav-link{font-size: 10px!important;}
   .nav-list {
     & li{margin-left: 12px !important;}
@@ -117,7 +115,13 @@ p {
   .nav-social {
     display: none !important;
   }
+  .container-right img {
+    transform: scale(1.2) translate3d(-15%, -22.5%, 0) !important;
+  }
+}
 
+// MOBILE
+@media(max-width: 500px) {
   .btn {
     padding: 6px 14px !important;
     font-size: 14px !important;
