--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Mukta'
+  font-family: 'Mukta';
+  transition: .7s ease;
 }
 
 ul {
@@ -18,6 +19,9 @@ a {
   color: $white;
 }
 
+html{
+  overflow-y: hidden;
+}
 
 body {
   overflow: hidden;
@@ -107,9 +111,24 @@ p {
 
   .nav-link{font-size: 10px!important;}
   .nav-list {
+    display: none !important;
     & li{margin-left: 12px !important;}
     & li:first-child {margin-left: 0!important;}
+  }
+  .open{
+    display: flex !important;
+    transition: .7s ease;
+  }
 
+  .nav-menu{
+    width: 100%;
+  }
+  .toggle-nav{
+    text-align: right;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
   }
   .nav-social {
     display: none !important;
