--- a/assets/css/partials/_menu.scss
+++ b/assets/css/partials/_menu.scss
@@ -37,6 +37,8 @@ header{
       max-width: 88px;
       padding-right: 12px;
     }
+    .no-padding{padding: 0!important;}
+
     .nav-list{
       display: flex;
       align-items: center;
