--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,10 @@ header {
   padding-right: 12px;
 }
 
+.nav-bar .nav-menu .no-padding {
+  padding: 0 !important;
+}
+
 .nav-bar .nav-menu .nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
