Correção de responsividade mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,7 @@ header {
     max-width: 30vw !important;
   }
   .container-right img {
-    min-width: 30vw;
+    min-width: 150px;
     -webkit-transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
             transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
