--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -157,7 +157,7 @@ p {
     max-width: 30vw!important;
   }
   .container-right img {
-    min-width: 30vw;
+    min-width: 150px;
     transform: scale(1.4) translate3d(-15%, -45%, 0) !important;
   }
 }
